# jsonedit

./: README.md  jsonedit.py  jsonedit_spec.json  pyproject.toml  task-list.json  v2025-10-28_part2_lions-python-programming-guidelines_updated-2025-11-18.txt
docs/: add-windows-integration.md
docs/summary/: summary.json
src/jsonedit/: __main__.py  jsonedit.py
src/jsoneditor/: __main__.py  jsoneditor.py
