[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonedit"
version = "0.1.0"
description = "JSON Tree Editor"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
jsonedit = "jsoneditor.jsoneditor:main"
jsoneditor = "jsoneditor.jsoneditor:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
