[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonedit"
version = "0.1.0"
description = "JSON Tree Editor"
readme = "README.md"
license = "CC0-1.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = []
authors = [
  { name = "Lion Kimbro", email = "lionkimbro@gmail.com" }
]
keywords = ["json", "editor", "edit", "agent", "llm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/LionKimbro/jsonedit"
Repository = "https://github.com/LionKimbro/jsonedit"
Issues = "https://github.com/LionKimbro/jsonedit/issues"

[project.gui-scripts]
jsonedit = "jsonedit.jsonedit:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
